Implementing unit tests for each directive.

--- a/examples/index.html
+++ b/examples/index.html
@@ -6,8 +6,7 @@
     <script src="../bower_components/angular/angular.js"></script>
     <script src="../src/debug/debug.js"></script>
     <script src="../src/strings/pad.js"></script>
-    <script src="../src/numbers/number-only.js"></script>
-    <script src="../src/numbers/fractional.js"></script>
+    <script src="../src/numbers/numbers.js"></script>
     <script src="../src/ng-utilities.js"></script>
 
     <script src="app.js"></script>
