--- a/examples/index.html
+++ b/examples/index.html
@@ -5,8 +5,11 @@
     <title>Validators</title>
     <script src="../bower_components/angular/angular.js"></script>
     <script src="../src/debug/debug.js"></script>
+    <script src="../src/strings/module.js"></script>
     <script src="../src/strings/pad.js"></script>
-    <script src="../src/numbers/numbers.js"></script>
+    <script src="../src/numbers/module.js"></script>
+    <script src="../src/numbers/fractional.js"></script>
+    <script src="../src/numbers/integeronly.js"></script>
     <script src="../src/ng-utilities.js"></script>
 
     <script src="app.js"></script>
