Listen for enterKey

--- a/examples/index.html
+++ b/examples/index.html
@@ -7,6 +7,8 @@
     <script src="../src/debug/debug.js"></script>
     <script src="../src/strings/module.js"></script>
     <script src="../src/strings/pad.js"></script>
+    <script src="../src/forms/module.js"></script>
+    <script src="../src/forms/enter.js"></script>
     <script src="../src/numbers/module.js"></script>
     <script src="../src/numbers/fractional.js"></script>
     <script src="../src/numbers/integeronly.js"></script>
